# amux

./: .gitignore  AGENTS.md  Cargo.toml  README.md  codebook.toml  package.json  pnpm-lock.yaml
docs/integrations/: amp.md  codex.md  gemini.md  opencode.md  pi.md
plugin/: amux-status.js
plugin/amp/: amux-status.ts
plugin/codex/: amux-status.sh
plugin/gemini/: gemini-extension.json
plugin/gemini/hooks/: amux-status.sh  hooks.json
plugin/opencode/: amux-status.js  amux-status.ts
src/: error.rs  main.rs
src/agent/: amp.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  pi.rs  process_table.rs  status_file.rs
src/cli/: list.rs  mod.rs  setup.rs  setup_amp.rs  setup_codex.rs  setup_gemini.rs  setup_opencode.rs  setup_pi.rs  status.rs
src/tmux/: mod.rs
