[package]
name = "amux"
version = "0.1.0"
edition = "2024"
description = "A CLI utility for managing and monitoring AI coding agents running in tmux panes"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = "3"
